Add card container layout with gradient background and responsive design

--- a/index.html
+++ b/index.html
@@ -57,17 +57,19 @@
       </div>
     </header>
     <main>
-      <div id="ad-section">
-        <button id="watch-ad-btn">Watch Ad</button>
-        <div id="timer"></div>
-        <button id="earn-btn" disabled>Earn $0.50</button>
-      </div>
-      <div id="balance-section">
-        <h2>Your Balance: $<span id="balance">0.00</span></h2>
-        <button id="withdraw-btn" class="withdraw-btn">Withdrawal</button>
-        <div class="info-note">Minimum payout: $20.00 | Fast PayPal & Bank Transfer</div>
-        <div class="withdrawal-ticker-card">
-          <div class="withdrawal-ticker" id="withdrawal-ticker"></div>
+      <div class="card-container">
+        <div id="ad-section">
+          <button id="watch-ad-btn">Watch Ad</button>
+          <div id="timer"></div>
+          <button id="earn-btn" disabled>Earn $0.50</button>
+        </div>
+        <div id="balance-section">
+          <h2>Your Balance: $<span id="balance">0.00</span></h2>
+          <button id="withdraw-btn" class="withdraw-btn">Withdrawal</button>
+          <div class="info-note">Minimum payout: $20.00 | Fast PayPal & Bank Transfer</div>
+          <div class="withdrawal-ticker-card">
+            <div class="withdrawal-ticker" id="withdrawal-ticker"></div>
+          </div>
         </div>
       </div>
     </main>
