--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
   </div>
     <header>
       <h1>Watch Ads and Earn Money</h1>
-      <p class="subtitle">Simple, secure, and trusted in the USA.</p>
+      <p class="subtitle">
+        <span class="subtitle-main">Simple, Secure, and Trusted</span><br>
+        <span class="subtitle-highlight">World's Highest Paying Website for Watching Ads</span>
+      </p>
       <div class="trust-badges">
         <span class="badge">SSL Secured</span>
         <span class="badge">Verified Payouts</span>
