Add informational message about ad rewards and style it for visibility

--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
         <div id="ad-section">
           <button id="watch-ad-btn">Watch Ad</button>
           <div id="timer"></div>
-          <button id="earn-btn" disabled>Earn $0.50</button>
+          <div class="ad-reward-info">
+            You earn $0-5 only if you watch the ad completely. If you skip, you will not receive the reward.
+          </div>
         </div>
         <div id="balance-section">
           <h2>Your Balance: $<span id="balance">0.00</span></h2>
