Update ad reward information to specify earnings per ad watched

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <button id="watch-ad-btn">Watch Ad</button>
           <div id="timer"></div>
           <div class="ad-reward-info">
-            You earn $0-5 only if you watch the ad completely. If you skip, you will not receive the reward.
+            You earn $0.50 per ad only if you watch the ad completely. If you skip, you will not receive the reward.
           </div>
         </div>
         <div id="balance-section">
