Add withdrawal balance message display for user feedback

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         <div id="balance-section">
           <h2>Your Balance: $<span id="balance">0.00</span></h2>
           <button id="withdraw-btn" class="withdraw-btn">Withdrawal</button>
+          <div id="withdrawal-balance-msg" style="display:none;margin:10px 0;color:#2563eb;font-weight:bold;"></div>
           <div class="info-note">Minimum payout: $20.00 | Fast PayPal & Bank Transfer</div>
           <div class="withdrawal-ticker-card">
             <div class="withdrawal-ticker" id="withdrawal-ticker"></div>
