Enhance SEO and social media integration with updated meta tags and structured data

--- a/index.html
+++ b/index.html
@@ -2,6 +2,46 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="Watch ads and earn real money online. Fast payouts to PayPal and bank accounts. Trusted by users in the USA, UK, and Australia.">
+  <meta name="keywords" content="watch ads, earn money, online earning, PayPal payout, UK, USA, Australia, fast payout, bank transfer, make money online, ad rewards">
+  <meta name="author" content="USAAds Premium">
+  <meta name="robots" content="index, follow">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="canonical" href="https://usaads.site/">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://usaads.site/">
+  <meta property="og:title" content="USAAds Premium - Watch Ads & Earn">
+  <meta property="og:description" content="Watch ads and earn real money online. Fast payouts to PayPal and bank accounts. Trusted by users in the USA, UK, and Australia.">
+  <meta property="og:image" content="https://usaads.site/og-image.jpg">
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://usaads.site/">
+  <meta property="twitter:title" content="USAAds Premium - Watch Ads & Earn">
+  <meta property="twitter:description" content="Watch ads and earn real money online. Fast payouts to PayPal and bank accounts. Trusted by users in the USA, UK, and Australia.">
+  <meta property="twitter:image" content="https://usaads.site/og-image.jpg">
+  <!-- Structured Data for SEO -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "USAAds Premium",
+    "url": "https://usaads.site/",
+    "description": "Watch ads and earn real money online. Fast payouts to PayPal and bank accounts. Trusted by users in the USA, UK, and Australia.",
+    "inLanguage": "en",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://usaads.site/?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    },
+    "audience": [
+      {"@type": "Audience", "geographicArea": {"@type": "Country", "name": "United States"}},
+      {"@type": "Audience", "geographicArea": {"@type": "Country", "name": "United Kingdom"}},
+      {"@type": "Audience", "geographicArea": {"@type": "Country", "name": "Australia"}}
+    ]
+  }
+  </script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>USAAds Premium - Watch Ads & Earn</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
