Remove redundant text from footer copyright notice

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <span class="flag"></span>
         <span class="flag"></span>
       </div>
-      <small>&copy; 2025 USAAds. Premium experience. Demo only.</small>
+      <small>&copy; 2025 USAAds. Premium experience.</small>
     </footer>
   </div>
   <script src="script.js"></script>
