Update ad reward message for clarity

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <a id="watch-ad-btn" class="watch-ad-link" href="https://www.effectivegatecpm.com/dctcbjypcn?key=0ad242fdde521bd25b3b104af0599901" target="_blank" rel="noopener">Watch Ad</a>
           <div id="timer"></div>
           <div class="ad-reward-info">
-            You earn $0.50 per ad only if you watch the ad completely. If you skip, you will not receive the reward.
+            Watch ad atleast 10 sec
           </div>
         </div>
         <div id="balance-section">
