Update keywords meta tag for improved SEO and relevance

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="Watch ads and earn real money online. Fast payouts to PayPal and bank accounts. Trusted by users in the USA, UK, and Australia.">
-  <meta name="keywords" content="watch ads, earn money, online earning, PayPal payout, UK, USA, Australia, fast payout, bank transfer, make money online, ad rewards">
+  <meta name="keywords" content="#WatchAds #EarnMoney #MakeMoneyOnline #AdEarnings #PayPalPayout #BankTransfer #OnlineIncome #SideHustle #PassiveIncome #UK #USA #Australia #FastPayout #AdRewards #EarnFromHome #WorkFromHome #ExtraIncome #DigitalEarnings #InstantPayout #Cashout #OnlineJobs">
   <meta name="author" content="USAAds Premium">
   <meta name="robots" content="index, follow">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
